--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -2,5 +2,12 @@
 
   <h1><%-title %></h1>
   <p>Welcome to <%-title %></p>
+  <div class="test_form">
+  	<p>Login</p>
+  	<input id="login" class="login"></input>
+  	<p>Password</p>
+  	<input id="password" class="password"></input>
+  	<button id="submitFormButton" name="submit">Check</button>
+  </div>
 
 <% include footer %>
